--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -16,7 +16,7 @@
     <title>UK Malifaux Community</title>
   </head>
   <body class="font-dosis bg-zinc-800 text-zinc-50">
-    <div class="md:container md:mx-auto p-4">
+    <div class="w-full p-2 md:p-0 md:mx-auto max-w-lg">
       <h1 class="ml-2">
         <a
           class="text-4xl font-bold no-underline text-zinc-50"
@@ -28,9 +28,7 @@
         <a href="{% url 'event_list' %}">Events</a>
         <a href="{% url 'team_list' %}">Teams</a>
       </nav>
-    </div>
-    <div class="md:container md:mx-auto px-4">
-      <section>{% block content %} {% endblock %}</section>
+      <section>{% block content %} {% endblock content %}</section>
     </div>
   </body>
 </html>
