add more skeleton views and tweak debug settings

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -5,11 +5,8 @@
     {% comment %} fonts {% endcomment %}
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+          rel="stylesheet" />
     {% tailwind_css %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,17 +15,18 @@
   <body class="font-dosis bg-zinc-800 text-zinc-50">
     <div class="w-full p-2 md:p-0 md:mx-auto max-w-lg">
       <h1 class="ml-2">
-        <a
-          class="text-4xl font-bold no-underline text-zinc-50"
-          href="{% url 'home_page' %}"
-          >UK Malifaux Community</a
-        >
+        <a class="text-4xl font-bold no-underline text-zinc-50"
+           href="{% url 'home_page' %}">UK Malifaux Community</a>
       </h1>
       <nav class="flex gap-1 justify-end">
         <a href="{% url 'event_list' %}">Events</a>
         <a href="{% url 'team_list' %}">Teams</a>
+        <a href="{% url 'venue_list' %}">Venues</a>
       </nav>
-      <section>{% block content %} {% endblock content %}</section>
+      <section>
+        {% block content %}
+        {% endblock content %}
+      </section>
     </div>
   </body>
 </html>
