--- a/website/templates/website/team_list.html
+++ b/website/templates/website/team_list.html
@@ -1,7 +1,17 @@
-{% extends 'website/base.html'%} {% block content %}
-<h2>Teams</h2>
-<ul>
-  {% for team in object_list %} {{team.name}} led by {{team.captain.first_name}}
-  {{team.captain.last_name}} {% endfor %}
-</ul>
+{% extends 'website/base.html' %}
+{% block tab_title %}
+  Malifaux Teams
+{% endblock tab_title %}
+{% block page_title %}
+  Teams
+{% endblock page_title %}
+{% block content %}
+  <ul>
+    {% for team in object_list %}
+      {{ team.name }} led by {{ team.captain.first_name }}
+      {{ team.captain.last_name }}
+    {% empty %}
+      no teams yet!
+    {% endfor %}
+  </ul>
 {% endblock %}
