--- a/website/templates/website/event_list.html
+++ b/website/templates/website/event_list.html
@@ -1,10 +1,7 @@
 {% extends "website/base.html" %}
-{% block tab_title %}
-  Malifaux Events
-{% endblock tab_title %}
-{% block page_title %}
-  Events
-{% endblock page_title %}
+{% comment %} {% block tab_title %}
+  {{ page.title }}
+{% endblock tab_title %} {% endcomment %}
 {% block content %}
   <table>
     <tbody>
