--- a/website/templates/website/home_page.html
+++ b/website/templates/website/home_page.html
@@ -1,23 +1,36 @@
 {% extends 'website/base.html' %}
+{% load cloudinary_tags %}
 {% block content %}
-  {{ page_content.html | safe }}
-  {{ page.page_title }}
-  {{ events.count }}
-  <a href="{% url 'event_list' %}">events</a> in the system!
-  <ol>
-    {% for event in events %}<li>{{ event.name }}</li>{% endfor %}
-  </ol>
-</section>
-<section>
-  {{ teams.count }} teams in the system!
-  <ol>
-    {% for team in teams %}<li>{{ team.name }}</li>{% endfor %}
-  </ol>
-</section>
-<section>
-  {{ venues.count }} venues in the system!
-  <ol>
-    {% for venue in venues %}<li>{{ venue.name }}</li>{% endfor %}
-  </ol>
-</section>
+  <section>
+    {{ page_content.introduction | safe }}
+  </section>
+  <div>
+    <section>
+      <h3>
+        <a href="{% url 'event_list' %}">{{ page_content.events_section_heading | safe }}</a>
+      </h3>
+      {{ page_content.events_section_explanation | safe }}
+      {% for event in events %}
+        <div class="mb-8">
+          <h4>
+            <a href="{% url 'event_detail' event.id %}">{{ event.name }}</a>
+          </h4>
+          <p>{{ event.date }} {{ event.venue.city }}</p>
+          <p>{{ event.description | safe }}</p>
+        </div>
+        <hr />
+      {% endfor %}
+    </section>
+    <section>
+      <h3>
+        <a href="{% url 'team_list' %}">{{ page_content.teams_section_heading | safe }}</a>
+      </h3>
+      {{ page_content.teams_section_explanation | safe }}
+      {% for team in teams %}
+        <div>
+          <a href="{% url 'team_detail' team.id %}">{{ team.name }}</a> - {{ team.usual_venue.city }}
+        </div>
+      {% endfor %}
+    </section>
+  </div>
 {% endblock %}
