--- a/website/templates/website/event_detail.html
+++ b/website/templates/website/event_detail.html
@@ -7,43 +7,45 @@
   {{ event.name }} at {{ event.venue.name }} - {{ event.date }}
 {% endblock page_title %}
 {% block content %}
-  <section>
-    <h2>{{ event.name }} - {{ event.venue.name }}</h2>
-    <p>
-      organised by {{ event.tournament_organiser.first_name }}
-      {{ event.tournament_organiser.last_name }}
-    </p>
-    {{ event.description | safe }}
-  </section>
+  {% if event.artwork %}
+    <div class="max-w-md mx-auto">
+      <img data-thumbnail
+           src="{% cloudinary_responsive_image event.artwork.public_id %}"
+           alt="Artwork for {{ event.name }}" />
+    </div>
+  {% endif %}
+  <p>
+    organised by {{ event.tournament_organiser.first_name }}
+    {{ event.tournament_organiser.last_name }}
+  </p>
+  {{ event.description | safe }}
   {% if event.best_painted_images %}
-    <section>
-      <h3 class="text-red-300">Best Painted</h3>
-      <div class="grid grid-cols-[repeat(auto-fit,_200px)] justify-center gap-4">
-        {% for best_painted_image in event.best_painted_images.all %}
-          <img data-thumbnail
-               src="{% cloudinary_thumbnail best_painted_image.image.public_id size=200 %}"
+    <h3 class="text-red-300">Best Painted</h3>
+    <div class="grid grid-cols-[repeat(auto-fit,_200px)] justify-center gap-4">
+      {% for best_painted_image in event.best_painted_images.all %}
+        <img data-thumbnail
+             src="{% cloudinary_thumbnail best_painted_image.image.public_id size=200 %}"
+             alt="{{ best_painted_image.title }}"
+             sizes="(max-width: 600px) 480px,
+                    (max-width: 1200px) 800px,
+                    1600px"
+             srcset="{% cloudinary_thumbnail best_painted_image.image.public_id size=480 %} 480w,
+                     {% cloudinary_thumbnail best_painted_image.image.public_id size=800 %} 800w,
+                     {% cloudinary_thumbnail best_painted_image.image.public_id size=1600 %} 1600w"
+             width="200"
+             height="200"
+             class="rounded-md cursor-pointer" />
+        <div data-lightbox
+             data-public-id="{{ best_painted_image.image.public_id }}"
+             class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center hidden">
+          <button class="absolute top-4 right-4 text-white text-xl">✖</button>
+          <img id="lightbox-image"
+               src="{{ best_painted_image.image.url }}"
                alt="{{ best_painted_image.title }}"
-               sizes="(max-width: 600px) 480px,
-                      (max-width: 1200px) 800px,
-                      1600px"
-               srcset="{% cloudinary_thumbnail best_painted_image.image.public_id size=480 %} 480w,
-                       {% cloudinary_thumbnail best_painted_image.image.public_id size=800 %} 800w,
-                       {% cloudinary_thumbnail best_painted_image.image.public_id size=1600 %} 1600w"
-               width="200"
-               height="200"
-               class="rounded-md cursor-pointer" />
-          <div data-lightbox
-               data-public-id="{{ best_painted_image.image.public_id }}"
-               class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center hidden">
-            <button class="absolute top-4 right-4 text-white text-xl">✖</button>
-            <img id="lightbox-image"
-                 src="{{ best_painted_image.image.url }}"
-                 alt="{{ best_painted_image.title }}"
-                 class="max-w-full max-h-full rounded-md bg-black" />
-          </div>
-        {% endfor %}
-      </div>
-    </section>
+               class="max-w-full max-h-full rounded-md bg-black" />
+        </div>
+      {% endfor %}
+    </div>
     <script>
   document.querySelectorAll("[data-lightbox] button").forEach((button) => {
     button.addEventListener("click", function closeLightbox(event) {
