--- a/website/templates/website/event_list.html
+++ b/website/templates/website/event_list.html
@@ -20,5 +20,6 @@
       {% empty %} No events
       {% endfor %}
     {% empty %} No months
-    {% endfor %}
-  {% endblock content %}
+    </div>
+  {% endfor %}
+{% endblock content %}
