--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -36,5 +36,6 @@
         {% endblock content %}
       </section>
     </div>
+    <script src="{% static 'website/js/page_scripts.js' %}"></script>
   </body>
 </html>
