--- a/website/templates/website/event_detail.html
+++ b/website/templates/website/event_detail.html
@@ -19,8 +19,9 @@
     {{ event.tournament_organiser.last_name }}
   </p>
   {{ event.description | safe }}
-  {% if event.best_painted_images %}
-    <c-gallery title="Best Painted" :images="event.best_painted_images.all" gallery_name="best_painted" />
-  {% endif %}
-  <c-lightbox :image="best_painted_image" }}/>
+  <c-gallery title="Best Painted" :images="event.best_painted_images.all" gallery_name="best_painted" />
+  <c-gallery title="Prizes" :images="event.prize_images.all" gallery_name="prizes" />
+  <c-gallery title="Swag" :images="event.swag_images.all" gallery_name="swag" />
+  <c-gallery title="Play" :images="event.play_images.all" gallery_name="play" />
+  <c-lightbox />
 {% endblock content %}
