fix lightbox js

--- a/website/templates/cotton/gallery.html
+++ b/website/templates/cotton/gallery.html
@@ -21,6 +21,12 @@
                          class="rounded-md cursor-pointer" />
                 </img>
             </a>
+            <div data-lightbox-public-id="{{ image.image.public_id }}"
+                 class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center hidden">
+                <button href="#" class="absolute top-4 right-4 text-white text-xl">✖</button>
+                <c-responsive_image alt="{{ image.image.alt }}" public_id="{{ image.image.public_id }}" />
+                <img class="max-w-full max-h-full rounded-md bg-black" />
+            </div>
         {% endfor %}
     </div>
 </section>
